# cpm

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: constraints_2d.py  constraints_3d.py  example.py  initial_state.npy  visualisation_2d.py  visualisation_3d.py
notebooks/: cpm.ipynb  reference_simulations.ipynb
src/: cell_states.cpp  cell_states.h  centroids.cpp  centroids.h  cpm.cpp  cpm.h  dice_set.cpp  dice_set.h  hamiltonian.cpp  hamiltonian.h  lattice.h  lattice_2d.cpp  lattice_2d.h  lattice_3d.cpp  lattice_3d.h  linalg.cpp  linalg.h  python_wrapper.cpp  ranxoshi256.cpp  ranxoshi256.h  simulation.cpp  simulation.h
