[build-system]
requires = ["setuptools >= 45.1","numpy >= 1.19"]
build-backend = "setuptools.build_meta"

[project]
name = "speedy-cpm"
version = "1.0"
description = "Optimized Cellular Potts Model implementation for benchmarking purposes"
readme = "README.md"
license = {file = "LICENSE"} 
authors = [
	{ name="Shabaz Sultan", email="shabaz.sultan@ru.nl" },
	{ name="Johannes Textor", email="johannes.textor@ru.nl" }
]

[project.urls]
homepage = "https://computational-immunology.org"

